# whathappened

./: .gitignore  README.md
.github/workflows/: main.yaml
src/: Pipfile  setup.cfg  setup.py
src/whathappened/: README.md  aws_fun.py  cli.py  core.py
src/whathappened/test/: conftest.py  test_cli.py  test_core.py
test/: test_integration.py
