# [metadata]
# name = "whathappened"
# version = 0.0.1

# [options]
# install_requires =
#   requests
#   importlib; python_version == "2.6"
# packages = find:

# [options.packages.find] #optional
# include=pkg1, pkg2
# exclude=pk3, pk4

[console_scripts]
whathappened = whathappened:core
# One which depends on extras:
# foobar = foomod:main_bar [bar,baz]

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist, .venv/
max-line-length = 80
